syntax = "proto3";

package nicknames;

import "koinos/options.proto";

message tabi {
   repeated string patterns = 1;
}

message set_tabi_args {
   bytes token_id = 1 [(koinos.btype) = HEX];
   tabi tabi = 2;
}

message extended_metadata {
   bytes token_id = 1 [(koinos.btype) = HEX];
   bytes address = 2 [(koinos.btype) = ADDRESS];
   bytes other = 10;
}
